tests/typing/errors/partial_pattern_match/partial_2.ae

type t =
  A
| B of {c : int}
| C

goal g:
  match A with
  | A -> 1 <= 1
  | C -> 2 <= 1
  end
